--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
-<h1 align="center">Sign up</h1>
-
-<%= render "sign_up" %>
+<div class="container padding-top-form">
+  <h1 align="center">Sign up</h1>
+  <%= render "sign_up" %>
+</div>
