--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Codekrieg" %></title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag "application", :media => "all" %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
@@ -30,30 +29,33 @@
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
     <%= javascript_include_tag "application" %>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
     <![endif]-->
   </head>
   <body>
-  
+<% if notice %>
+  <div id="notices_wrap">
+  <p class="notice"><%= notice %></p>  
+  </div>
+<% elsif alert %>
+  <div id="notices_wrap">
+  <p class="notice"><%= alert %></p>  
+  </div>
+<% end %>  
+
     <%= render "layouts/navigation" %>
     
-    <div class="container">
+    <div class="container-fluid" id="page-content">
       <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          
-        </div>
+        <%= yield %>
       </div><!--/row-->
     </div> <!-- /container -->
     
-    <%= yield %>
+    <%= render "layouts/footer" %>
     
-    <footer>
-      <p>&copy; Company 2016</p>
-    </footer>
-
+    <script src="https://cdn.jsdelivr.net/jquery.tubular/1.0.1/jquery.tubular.1.0.js"></script>
   </body>
 </html>
