--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,48 @@
-<header class="indexheader img-responsive">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-12">
-              <%= image_tag "http://i67.tinypic.com/iz5btt.png", class: "img-responsive", align: "center" %>
-              <div class="intro-text">
-                  <span class="tagline">A Ruby On Rails Development Company</span>
-              </div>
-          </div>
-      </div>
-  </div>
-</header>
-<section >
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi sapiente ipsa possimus inventore dicta quidem officia modi esse veritatis commodi! Et, recusandae explicabo quis perspiciatis reprehenderit nobis unde corporis laborum..Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, voluptatibus, quo quae possimus ipsum quaerat facilis fugiat dolore beatae at recusandae incidunt inventore quam voluptates nihil itaque esse perspiciatis porro!.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, quos, perferendis, accusamus temporibus provident in laborum magnam iure voluptatem iste illo tempora necessitatibus inventore maiores cum laboriosam ipsam corporis ratione!</p>
+<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="background-vid">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
+        <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(76, 105, 114);"></div>
+        <div class="mbr-box__container mbr-section__container container">
+            <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
+                <div class="row">
+                  <div class=" col-sm-12">
+                    <div class="mbr-hero animated fadeInUp">
+                        <h1 align="center" class="mbr-hero__text">CodeKrieg</h1>
+                        <p align="center" class="mbr-hero__subtext">A Ruby on Rails Development Company</p>
+                    </div>
+                  </div>
+                </div>
+            </div></div>
+        </div>
+        <div class="mbr-arrow mbr-arrow--floating text-center">
+            <div class="mbr-section__container container">
+                <a class="mbr-arrow__link" href="#features1-42"><i class="glyphicon glyphicon-menu-down"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="content-2 col-12" id="about">
+    <div class="mbr-section__container mbr-section__container--isolated container">
+        <div class="row">
+                <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 mbr-section__right">
+                    <div class="mbr-section__container mbr-section__container--middle">
+                        <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
+                            <h3 class="mbr-header__text">Who We Are</h3>
+                        </div>
+                    </div>
+                    <div class="mbr-section__container mbr-section__container--middle">
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>
+                        	Young start-up that has its main focus on software development for web applications. <br/>
+                        	Our main objective is to fulfill our customers' plans and contribute to the well being of the <strong>World Wide Web</strong>. </br>
+                        	We are currently using a lot of powerful assets, but the most important ones are <strong>Ruby</strong> and <strong>Ruby on Rails</strong>.
+                        	</p></div>
+                    </div>
+                    <div class="mbr-section__container">
+                        <div class="mbr-buttons mbr-buttons--auto-align btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com/bootstrap-template/">Learn More</a></div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
 </section>
