--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,48 +1,174 @@
-<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="background-vid">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
-        <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(76, 105, 114);"></div>
-        <div class="mbr-box__container mbr-section__container container">
-            <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
+<section class="ck-box ck-section ck-section--relative ck-section--fixed-size ck-section--full-height ck-section--bg-adapted ck-after-navbar" id="background-vid">
+    <div class="ck-box__magnet ck-box__magnet--sm-padding ck-box__magnet--center-left">
+        <div class="ck-overlay" style="opacity: 0.6; background-color: rgb(76, 105, 114);"></div>
+        <div class="ck-box__container ck-section__container container">
+            <div class="ck-box ck-box--stretched"><div class="ck-box__magnet ck-box__magnet--center-left">
                 <div class="row">
                   <div class=" col-sm-12">
-                    <div class="mbr-hero animated fadeInUp">
-                        <h1 align="center" class="mbr-hero__text">CodeKrieg</h1>
-                        <p align="center" class="mbr-hero__subtext">A Ruby on Rails Development Company</p>
+                    <div class="ck-hero animated fadeInUp">
+                        <h1 align="center" class="ck-hero__text">CodeKrieg</h1>
+                        <p align="center" class="ck-hero__subtext">A Ruby on Rails Development Company</p>
                     </div>
                   </div>
                 </div>
             </div></div>
         </div>
-        <div class="mbr-arrow mbr-arrow--floating text-center">
-            <div class="mbr-section__container container">
-                <a class="mbr-arrow__link" href="#features1-42"><i class="glyphicon glyphicon-menu-down"></i></a>
+        <div class="ck-arrow ck-arrow--floating text-center">
+            <div class="ck-section__container container">
+                <a class="ck-arrow__link" href="#features1-42"><i class="glyphicon glyphicon-menu-down"></i></a>
             </div>
         </div>
     </div>
 </section>
 
-<section class="content-2 col-12" id="about">
-    <div class="mbr-section__container mbr-section__container--isolated container">
-        <div class="row">
-                <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 mbr-section__right">
-                    <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                            <h3 class="mbr-header__text">Who We Are</h3>
-                        </div>
-                    </div>
-                    <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>
-                        	Young start-up that has its main focus on software development for web applications. <br/>
-                        	Our main objective is to fulfill our customers' plans and contribute to the well being of the <strong>World Wide Web</strong>. </br>
-                        	We are currently using a lot of powerful assets, but the most important ones are <strong>Ruby</strong> and <strong>Ruby on Rails</strong>.
-                        	</p></div>
-                    </div>
-                    <div class="mbr-section__container">
-                        <div class="mbr-buttons mbr-buttons--auto-align btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com/bootstrap-template/">Learn More</a></div>
-                    </div>
+<section class="ck-section ck-section--relative ck-section--fixed-size" id="about">
+    <div class="ck-section__container container ck-section__container--isolated">
+            
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="ck-section__container ck-section__container--middle">
+                <div class="ck-header ck-header--auto-align ck-header--wysiwyg">
+                    <h3 align="center" class="ck-header__text">Who We Are</h3>
+                    <hr class="ck-divider"></hr>
                 </div>
-                
+            </div>
+            
+            <div class="ck-section__container ck-section__container--middle">
+                <div class="ck-article ck-article--auto-align ck-article--wysiwyg">
+                    <p>
+                     Young start-up that has its main focus on software development for web applications. 
+                     <br/>
+            	     Our main objective is to fulfill our customers' plans and contribute to the well being of the <strong>World Wide Web</strong>. 
+            	     </br>
+            	     We are currently using a lot of powerful assets, but the most important ones are <strong>Ruby</strong> and <strong>Ruby on Rails</strong>.
+            	    </p>
+                </div>
+            </div>
+            
+            <div class="ck-section__container">
+                <div class="ck-section__container">
+                    <div align="center">
+                        <a class="ck-buttons__btn btn btn-lg btn-default" href="#">Find More</a>
+                    </div>
+                 </div>
+            </div>
+        </div>
+        
+    </div
+</section>
+
+<section class="ck-section ck-section--relative ck-section--fixed-size" id="services">
+    <div class="ck-section__container container ck-section__container--isolated">
+            
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="ck-section__container ck-section__container--middle">
+                <div class="ck-header ck-header--auto-align ck-header--wysiwyg">
+                    <h3 align="center" class="ck-header__text">What We Offer</h3>
+                    <hr class="ck-divider"></hr>
+                </div>
+            </div>
+            
+            <div class="ck-section__container ck-section__container--middle">
+                <div class="ck-article ck-article--auto-align ck-article--wysiwyg">
+                   <div class="contianer-fluid">
+                       <div class="row">
+                           <div class="col-xs-12 col-md-4 col-lg-4">
+                                   <div align="center">
+                                      <span class="fa-stack-2x fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-desktop fa-stack fa-inverse"></i>
+                                      </span>
+                                   </div>
+                                   <h4>Web Design</h4>
+                           </div>  
+                          
+                           <div class="col-xs-12 col-md-4 col-lg-4">
+                               <div align="center">
+                                  <span class="fa-stack-2x fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-cog fa-spin fa-stack fa-inverse"></i>
+                                  </span>
+                               </div>
+                               <h4>Web Development</h4>
+                           </div>  
+                           <div class="col-xs-12 col-md-4 col-lg-4">
+                                <div align="center">
+                                    <span class="fa-stack-2x fa-lg">
+                                      <i class="fa fa-circle fa-stack-2x"></i>
+                                      <i class="fa fa-flag fa-stack fa-inverse"></i>
+                                    </span>
+                                </div>
+                                <h4>Consultancy &amp; Support</h4>
+                           </div>  
+                       </div
+                       
+                       <div class="row">
+                           <div class="col-xs-12 padding-top-what-we-offer-button">
+                               <div align="center">
+                                   <%= link_to "Learn More", "#", class: "btn btn-danger" %>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   
+                </div>
             </div>
         </div>
     </div>
+</section>
+
+
+<section id="portfolio" class="ck-section ck-section--relative ck-section--fixed-size our-work">
+    <div class="ck-section__container container ck-section__container--isolated">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="ck-section__container ck-section__container--middle">
+                <div class="ck-header ck-header--auto-align ck-header--wysiwyg">
+                    <h3 align="center" class="ck-header__text">Our Work</h3>
+                    <hr class="ck-divider"></hr>
+                </div>
+            </div>
+        </div>
+            <div class="row no-gutters">
+            <% @projects.each do |project| %>    
+                 <div class="col-md-4 col-xs-6 col-lg-4 portfolio-item">
+                    <%= link_to  project_path(project), class:"portfolio-link" do %>
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search fa-3x"></i>
+                            </div>
+                        </div>
+                        <%= image_tag project.project_image.url(:featured), class: "img-responsive" %>
+                    <% end %>
+                </div>
+                <% end %>     
+            </div>
+        </div>
+        
+</section>
+
+<section id="blog-posts" class="ck-section ck-section--relative ck-section--fixed-size our-blog-posts">
+    <div class="ck-section__container container ck-section__container--isolated">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="ck-section__container ck-section__container--middle">
+                <div class="ck-header ck-header--auto-align ck-header--wysiwyg">
+                    <h3 align="center" class="ck-header__text">Latest Blog Posts</h3>
+                    <hr class="ck-divider"></hr>
+                </div>
+            </div>
+        </div>
+         <div class="row no-gutters">
+            <% @articles.each do |article| %>        
+                 <div class="col-lg-6 col-md-6 col-xs-6 article-item">
+                     <%= link_to  article_path(article), class:"article-link" do %>
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-link fa-3x"><br /><h4><%= article.title %></h4></i>
+                            </div>
+                        </div>
+                        <%= image_tag article.image.url(:featured), class: "img-responsive" %>      
+                    <% end %>
+                </div>
+            <% end %>                     
+            </div>
+    </div>
+    
 </section>
