--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
-<section class="content-2 simple col-1 col-undefined mbr-parallax-background mbr-after-navbar" id="content5-77" style="background-image: url(https://images.unsplash.com/photo-1414546394137-673d6fe1512e?crop=entropy&fit=crop&fm=jpg&h=800&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1600);">
-  <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
+<section class="content-2 simple col-1 col-undefined ck-parallax-background ck-after-navbar" id="content5-77" style="background-image: url(https://images.unsplash.com/photo-1414546394137-673d6fe1512e?crop=entropy&fit=crop&fm=jpg&h=800&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1600);">
+  <div class="ck-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
         <div class="row">
             <div>
@@ -15,11 +15,11 @@
 </section>
 
 <% @categories.each do |category| %>
-  <section class="mbr-section" id="header3-78">
-      <div class="mbr-section__container container mbr-section__container--first">
-          <div class="mbr-header mbr-header--wysiwyg row">
+  <section class="ck-section" id="header3-78">
+      <div class="ck-section__container container ck-section__container--first">
+          <div class="ck-header ck-header--wysiwyg row">
               <div class="col-sm-8 col-sm-offset-2">
-                  <h3 class="mbr-header__text"><i class="fa fa-bookmark"></i> <%= link_to "#{category.name}", category_path(category) %>&nbsp;</h3>
+                  <h3 class="ck-header__text"><i class="fa fa-bookmark"></i> <%= link_to "#{category.name}", category_path(category) %>&nbsp;</h3>
               </div>
           </div>
       </div>
