--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,4 @@
-<div class="container-fluid padding-bottom">
-  <section class="edit-category">
+<div class="container-fluid padding-top-form padding-bottom-form">
     <h1 align="center">Create a new category</h1>
     <%= render "form" %>
-  </section>
 </div>
