--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,18 +2,24 @@
   <div class="container-fluid">
     <div class="row text-center">
       <div class="col-lg-12 col-xs-12">
-        <li class="list-unstyled social">
           <h3 class="titles">Social Media</h3>
-          <%= link_to "https://twitter.com/CodeKrieg" do %>
-            <i class="fa fa-twitter fa-2x"></i>
-          <% end %>
-          <%= link_to "https://www.facebook.com/codekriegdev" do %>
-            <i class="fa fa-facebook fa-2x"></i>
-          <% end %>
-          <%= link_to "https://github.com/CodeKrieg" do %>
-            <i class="fa fa-github fa-2x"></i>
-          <% end %>
-        </li>
+          <div class="social-links">
+             <li class="list-unstyled social"> 
+               <%= link_to "https://twitter.com/CodeKrieg" do %>
+                <i class="fa fa-twitter fa-2x"></i>
+               <% end %>
+            </li>
+            <li class="list-unstyled social"> 
+              <%= link_to "https://www.facebook.com/codekriegdev" do %>
+                <i class="fa fa-facebook fa-2x"></i>
+              <% end %>
+            </li>
+            <li class="list-unstyled social">
+            <%= link_to "https://github.com/CodeKrieg" do %>
+              <i class="fa fa-github fa-2x"></i>
+            <% end %>
+          </li>
+        </div>
       </div>
     </div>
     <hr class="divider"></hr>
@@ -21,29 +27,51 @@
   <div class="container footer-2">
     <div class="row">
       <div class="col-xs-12 col-md-4 col-lg-4">
+        <h4>Contact Us</h4>
+        <hr class="ck-divider"></hr>
         <div class="locate">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, veniam, maiores, ad, itaque esse accusantium saepe expedita ut explicabo aliquid dolore quis eaque eius at minima nobis quisquam dolor dolorum.
+          <li class="contact"><i class="fa fa-1x fa-map-marker">
+             Italy - India
+          </i>
+          </li>
+          
+          <li class="contact">
+          <i class="fa fa-1x fa-skype">
+             codekrieg
+          </i>
+          </li>
+          
+          <li class="contact">
+            <i class="fa fa-1x fa-phone"> India: <%= number_to_phone(9589109340, country_code: 91) %> </i>
+            <i class="fa fa-1x fa-phone"> Italy: <%= number_to_phone(3894355390, country_code: 39) %> </i>
+          </li>
         </div>
       </div>
+      <div></div>
       <div class="col-xs-12 col-md-4 col-lg-4">
+        <h4>Site Links</h4>
+        <hr class="ck-divider"></hr>
         <ul class="site-links">
-          <li class="list-unstyled"><%= link_to "Home", "" %></li>
-            <li class="list-unstyled"> <%= link_to "Portfolio", "" %></li>
-            <li class="list-unstyled"> <%= link_to "Services", "" %></li>
-            <li class="list-unstyled"> <%= link_to "The Company", "" %></li>
-            <li class="list-unstyled"></li><%= link_to "Blog", "" %></li>
-            <%= link_to "Request A Quote", "" %>
-          </li>
+          <li><%= link_to "Home", "" %></li>
+            <li><%= link_to "Portfolio", "" %></li>
+            <li><%= link_to "Services", "" %></li>
+            <li><%= link_to "The Company", "" %></li>
+            <li><%= link_to "Blog", "" %></li>
+            <li><%= link_to "Request A Quote", "" %></li>
         </ul>
       </div>
       <div class="col-xs-12 col-md-4 col-lg-4">
         <ul class="latest-twitter-post">
           <li class="list-unstyled">
-            
+            something nice coming soon here!
           </li>
         </ul>
       </div>
     </div>
+    <hr class="divider"></hr>
+  </div>
+  <div class="copyright">
+    <p class="text-center"> &copy All Rights Reserved <%= Time.now.year%>, <%= link_to "CodeKrieg", root_path %></p>
   </div>
 </footer>
 
