--- a/app/views/users/_sign_up.html.erb
+++ b/app/views/users/_sign_up.html.erb
@@ -1,7 +1,22 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <%= form_for(@user, :html => {class: "form-horizontal", role: "form", multipart: true}) do |f| %>
+<a class="btn btn-link-1 launch-modal" href="#" data-modal-id="modal-login">Awesome Sign Up Button</a>
+
+<!-- MODAL -->
+
+<div class="modal fade" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="modal-login-label" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">
+					<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+				</button>
+				<h3 class="modal-title" id="modal-login-label">Sign Up on CodeKrieg</h3>
+				<p>Enter your username and password to sign in</p>
+			</div>
+			
+			<div class="modal-body">
+				
+        <%= form_for(@user, :html => {class: "form-horizontal", role: "form", multipart: true}) do |f| %>
         <!--Form group for picture-->
         <div class="form-group">
           <div class="control-label col-sm-2">
@@ -43,15 +58,12 @@
         </div>
         
         <!--Form group for the signup button-->
-         <div class="form-group">
-          <div class="control-label col-sm-2">
-            <%= f.submit "Sign Up", class: "btn btn-success btn-sm" %>
-          </div>
-        </div>
-        
+        <button type="submit" class="btn-form">Sign in!</button>
+ 
       <% end %>
-    </div>
-  </div>
+              
+			</div>
+			
+		</div>
+	</div>
 </div>
-  
-  
