--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,7 +23,7 @@
                       <%= link_to "Projects", projects_path %>
                   </li>
                   <li>
-                      <a href="#about">Services</a>
+                      <%= link_to "Services", services_path %>
                   </li>
                   <li>
                       <%= link_to "The Company", company_path %>
