--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -1,4 +1,4 @@
-<section class="content-2 simple col-1 col-undefined ck-parallax-background ck-after-navbar" id="content5-77" style="background-image: url(https://images.unsplash.com/photo-1454165205744-3b78555e5572?crop=entropy&fit=crop&fm=jpg&h=800&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1600);">
+<section class="content-2 simple col-1 col-undefined ck-parallax-background ck-after-navbar" id="content5-77" style="background-image: url(https://images.unsplash.com/photo-1414690165279-49ab0a9a7e66?crop=entropy&fit=crop&fm=jpg&h=800&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1600);">
   <div class="ck-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
         <div class="row">
@@ -14,6 +14,59 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="ck-section" id="content1-79">
+    <div class="ck-section__container container ck-section__container--middle about-page">
+        <div class="row">
+          
+            <div class="ck-article ck-article--wysiwyg col-sm-6">
+              <div>
+                <h2>Who We Are</h2>
+                <p>
+            	    Founded in 2016, CodeKrieg's expertise is developing bespoke web-based software (web applications) & unique web platforms.
+            	    although you may use a different term: SaaS, website, CMS, database application, web portal, etc.
+            	  </p>
+            	  <p>
+            	    We put in as much effort as possible to establishing a good relationship between us and our clients, 
+            	    this way we can easily communicate every aspect of their project and, understand what they truly want and need. <br>
+            	  </p>
+            	  <p>
+            	    For the <strong>future</strong>, we want to improve every small aspect when it comes to the way we build software and our relationship with our clients and partners.
+            	  </p>
+            	   <p>
+            	    We want to become better in everything we do and help people get their dream web application. <br>
+            	    We want to support as many clients as possible, help them when the need arises. <br>
+            	   </p>
+              </div>
+              
+              <hr>
+              
+              <div>
+                <h2>Technologies</h2>
+                 <p>
+            	    Beside having a very good relationship with our clients, 
+            	    we also try to bring the best with our amazing Linux workstations, we use popular open-source technologies like <strong>Ruby</strong>
+            	    and its famous web application framework <strong>Ruby on Rails</strong> and <strong>NodeJs</strong> a <strong>JavaScript</strong> runtime environment<br>
+            	    Beside those technologies we also use <strong>MongoDB</strong>, <strong>Postgres</strong> and <strong>mySQL</strong>. 
+            	    With all these technologies we build powerful web software applications. 
+            	   </p>
+              </div>
+			      </div>
+			      
+			     <div class="ck-article ck-article--wysiwyg col-sm-6">
+              <div>
+                <h2>Founders</h2>
+            	  <p>
+            	    <strong>CodeKrieg</strong> was founded by two friends.. Paul and Himanshu.<br>
+            	    They've meet each other on an online Ruby on Rails course and decided to partner up in order to bring awesome things to the World Wide Web
+            	  </p>
+              </div>
+              </div>
+			      </div>
+			      
         </div>
     </div>
 </section>
