--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -79,6 +79,10 @@
                                       </span>
                                    </div>
                                    <h4>Web Design</h4>
+                                       <li>Responsive</li>
+                                       <li>Clean</li>
+                                       <li>User Friendly</li>
+                                       <li>Awesome</li>
                            </div>  
                           
                            <div class="col-xs-12 col-md-4 col-lg-4">
@@ -89,6 +93,10 @@
                                   </span>
                                </div>
                                <h4>Web Development</h4>
+                                   <li>Ruby On Rails</li>
+                                   <li>Node JS</li>
+                                   <li>MongoDB</li>
+                                   <li>MySQL/Postgres</li>
                            </div>  
                            <div class="col-xs-12 col-md-4 col-lg-4">
                                 <div align="center">
@@ -98,8 +106,11 @@
                                     </span>
                                 </div>
                                 <h4>Consultancy &amp; Support</h4>
-                           </div>  
-                       </div
+                                    <li>Hosting &amp; Installation</li>
+                                    <li>Migration Support</li>
+                                    <li>Email/phone support</li>
+                                    <li>Application Security Consulting</li>
+                       </div>
                        
                        <div class="row">
                            <div class="col-xs-12 padding-top-what-we-offer-button">
