--- a/app/assets/stylesheets/codekrieg_style.css.scss
+++ b/app/assets/stylesheets/codekrieg_style.css.scss
@@ -2463,7 +2463,11 @@ html {
   z-index: 2;
   height: auto;
   h4{
-    padding: 5em;
+    padding-top: 5em;
+    text-align: center;
+  }
+  li{
+    list-style: none;
     text-align: center;
   }
 }
@@ -2480,6 +2484,15 @@ html {
 
 }
 
+.about-page {
+  padding-top: 70px;
+  padding-bottom: 200px;
+}
+
+.services-page {
+  padding-top: 150px;
+  padding-bottom: 200px;
+}
 
 .padding-top-login {
   padding-top: 6.250em;
