--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,15 @@
-<div class="col-xs-12 col-md-12 col-lg-12">
-<span>&nbsp;&nbsp;<em><%= time_ago_in_words(comment.created_at) %></em></span>
-<p><%= link_to comment.user.username, user_path(comment.user), class: "link_tags" %> said: </p>
-<div><%= comment.content %>
-<% if logged_in? && (@article.user == current_user || current_user.admin?) %>
-  <%= link_to "Delete", comment_path(comment), method: :delete, class:"btn btn-danger btn-tiny"%>
-<% end %>
-</div>
+<div class="media">
+    <a class="pull-left" href="#">
+        <!--PICTURE NEEDS TO BE ADDED HERE-->
+    </a>
+    <div class="media-body">
+        <h4 class="media-heading"><%= link_to comment.user.username, user_path(comment.user), class: "link_tags" %>
+            <small><%= time_ago_in_words(comment.created_at) %> ago</small>
+        </h4>
+        <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
+          <%= link_to "Delete", comment_path(comment), method: :delete, class:"btn btn-xs btn-danger "%>
+        <% end %>
+        <%= simple_format(comment.content) %>
+        <hr>
+    </div>
 </div>
