--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,34 +1,9 @@
 <footer>
-  <div class="container-fluid">
-    <div class="row text-center">
-      <div class="col-lg-12 col-xs-12">
-          <h3 class="titles">Social Media</h3>
-          <div class="social-links">
-             <li class="list-unstyled social"> 
-               <%= link_to "https://twitter.com/CodeKrieg" do %>
-                <i class="fa fa-twitter fa-2x"></i>
-               <% end %>
-            </li>
-            <li class="list-unstyled social"> 
-              <%= link_to "https://www.facebook.com/codekriegdev" do %>
-                <i class="fa fa-facebook fa-2x"></i>
-              <% end %>
-            </li>
-            <li class="list-unstyled social">
-            <%= link_to "https://github.com/CodeKrieg" do %>
-              <i class="fa fa-github fa-2x"></i>
-            <% end %>
-          </li>
-        </div>
-      </div>
-    </div>
-    <hr class="divider"></hr>
-  </div>
   <div class="container footer-2">
     <div class="row">
-      <div class="col-xs-12 col-md-4 col-lg-4">
+      <div class="col-xs-12 col-md-6 col-lg-6">
         <h4>Contact Us</h4>
-        <hr class="ck-divider"></hr>
+        <hr class="divider"></hr>
         <div class="locate">
           <li class="contact"><i class="fa fa-1x fa-map-marker">
              Italy - India
@@ -47,11 +22,37 @@
           </li>
         </div>
       </div>
-      <div></div>
-      <div class="col-xs-12 col-md-4 col-lg-4">
-        <h4>Site Links</h4>
-        <hr class="ck-divider"></hr>
-        <ul class="site-links">
+      
+      <div class="col-xs-12 col-md-6 col-lg-6">
+            <h4 class="titles">We are social</h4>
+            <hr class="divider"></hr>
+          <div class="social-links">
+            <ul class="list-inline text-center">
+               <li class="list-unstyled social"> 
+                 <%= link_to "https://twitter.com/CodeKrieg" do %>
+                  <i class="fa fa-twitter fa-2x"></i>
+                 <% end %>
+              </li>
+              <li class="list-unstyled social"> 
+                <%= link_to "https://www.facebook.com/codekriegdev" do %>
+                  <i class="fa fa-facebook fa-2x"></i>
+                <% end %>
+              </li>
+              <li class="list-unstyled social">
+              <%= link_to "https://github.com/CodeKrieg" do %>
+                <i class="fa fa-github fa-2x"></i>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <hr class="divider"></hr>
+  </div>
+  <div class="container">
+    <div class="row">
+    <div class="col-xs-12 col-lg-12 col-md-12">
+        <ul class="site-links list-inline">
           <li><%= link_to "Home", "" %></li>
             <li><%= link_to "Portfolio", "" %></li>
             <li><%= link_to "Services", "" %></li>
@@ -60,18 +61,10 @@
             <li><%= link_to "Request A Quote", "" %></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-md-4 col-lg-4">
-        <ul class="latest-twitter-post">
-          <li class="list-unstyled">
-            something nice coming soon here!
-          </li>
-        </ul>
+      <div class="copyright">
+        <p class="text-center"> &copy All Rights Reserved <%= Time.now.year%>, <%= link_to "CodeKrieg", root_path %></p>
       </div>
-    </div>
-    <hr class="divider"></hr>
-  </div>
-  <div class="copyright">
-    <p class="text-center"> &copy All Rights Reserved <%= Time.now.year%>, <%= link_to "CodeKrieg", root_path %></p>
+      </div>
   </div>
 </footer>
 
