Fixed restrictions and footer links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -53,12 +53,12 @@
     <div class="row">
     <div class="col-xs-12 col-lg-12 col-md-12">
         <ul class="site-links list-inline">
-          <li><%= link_to "Home", "" %></li>
-            <li><%= link_to "Portfolio", "" %></li>
-            <li><%= link_to "Services", "" %></li>
-            <li><%= link_to "The Company", "" %></li>
-            <li><%= link_to "Blog", "" %></li>
-            <li><%= link_to "Request A Quote", "" %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Portfolio", projects_path %></li>
+          <li><%= link_to "Services", services_path%></li>
+          <li><%= link_to "The Company", company_path%></li>
+          <li><%= link_to "Blog", articles_path%></li>
+          <li><%= link_to "Request A Quote", "" %></li>
         </ul>
       </div>
       <div class="copyright">
