--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -63,6 +63,9 @@
       </div>
       <div class="copyright">
         <p class="text-center"> &copy All Rights Reserved <%= Time.now.year%>, <%= link_to "CodeKrieg", root_path %></p>
+        <p class="text-center">
+          <%= link_to "Terms And Conditions", tos_path %> <%= link_to "Privacy Policy", privacy_path %> 
+        </p>
       </div>
       </div>
   </div>
