Testing new form

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -5,8 +5,9 @@
             <div>
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3 class="ck-header__text">Request A Quote</h3>
+                        <h3 class="ck-header__text">Request A Development Quote</h3>
                         <p>Do you want to work with us? Then send us a message!</p>
+                        <small style="color: white">Submitting the quote request form is not a contract for work, it is simply a request for an estimated development quote.</small>
                     </div>
                 </div>
             </div>
@@ -20,7 +21,7 @@
         <div class="row">
             <div class="ck-article ck-article--wysiwyg col-lg-12 col-xs-12 col-md-12">
                 <%= render "form" %>
-			      </div>
+			</div>
         </div>
     </div>
 </section>
