--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,7 +1,5 @@
 <div class="container padding-top-form">
   
-  <%= form_for @contact, :html => { multipart: true, :class => "form-horizontal build" } do |f| %>
-  
     <% if @contact.errors.any? %>
       <div id="error_expl" class="panel panel-danger">
         <div class="panel-heading">
@@ -16,45 +14,130 @@
         </div>
       </div>
     <% end %>
-    
-    <!-- Name -->
 
-      <div class="form-group">
-  <%= f.label :name, :class => 'control-label' %>
-  
-    <%= f.text_field :name, required: true, :class => 'form-control' %>
-  <%=f.error_span(:name) %>
+    <%= form_for @contact, :html => { multipart: true, :class => "form-horizontal build" } do |f| %>
+ 
+<!-- Form Name -->
+<legend>Contact Us Today!</legend>
+
+<!-- Text input-->
+
+<div class="form-group">
+  <%= f.label :name, :class => 'col-md-2 control-label' %>
+  <div class="col-md-8 inputGroupContainer">
+    <div class="input-group">
+      <span class="input-group-addon"><i class="fa fa-user"></i></span>
+      <%= f.text_field :name, required: true, :class => 'form-control', placeholder: "Full Name" %>
+      <%=f.error_span(:name) %>
+    </div>
+  </div>
 </div>
 
-<!-- Email -->
+<!-- Text input-->
 <div class="form-group">
-  <%= f.label :email, :class => 'control-label' %>
-    <%= f.email_field :email, required: true, :class => 'form-control' %>
-  <%= f.error_span(:email) %>
-</div>
-
-<!-- Warning-->
-<div class="form-group">
-    <div align="center" class="alert alert-warning middle">
-      <p><strong>Warning!</strong> please do not use any <strong>yahoo.com</strong> emails since we won't be able to receive them. <br>
-        Thank you very much and we are sorry for any inconvenience this might produce!</p>
+  <%= f.label :email, :class => 'col-md-2 control-label' %>
+    <div class="col-md-8 inputGroupContainer">
+      <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+          <%= f.email_field :email, required: true, :class => 'form-control', placeholder: "Your email" %>
+          <%= f.error_span(:email) %>
+      </div>
     </div>
 </div>
-<!-- Message -->
+
+
+<!-- Text input-->
+       
 <div class="form-group">
-  <%= f.label :message, :class => 'control-label' %>
-    <%= f.text_area :message, as: :text, :class => 'form-control' %>
-  <%=f.error_span(:message) %>
+   <%= f.label :phone, :class => 'col-md-2 control-label' %>
+    <div class="col-md-8 inputGroupContainer">
+      <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-phone"></i></span>
+          <%= f.phone_field :phone, :class => 'col-md-6 form-control', placeholder: "(845)555-1212"%>
+      </div>
+    </div>
 </div>
 
-<div class="form-group hidden">
-  <%= f.label :nickname %>
-    <%= f.text_field :nickname, hint: 'Leave this field blank!' %>
+
+<!-- Text input-->
+ 
+<div class="form-group">
+  <%= f.label :country, :class => 'col-md-2 control-label' %>
+    <div class="col-md-8 inputGroupContainer">
+      <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-home"></i></span>
+           <%= f.text_field :country, :class => 'col-md-6 form-control', placeholder: "Your country"%>
+      </div>
+    </div>
 </div>
 
-<!-- Submit -->
-<div class="form-group">
-    <%= f.submit 'Submit message', :class => 'btn btn-primary' %>
-</div>    
-  <% end %>
+<!-- Select Basic -->
+   
+<div class="form-group"> 
+  <%= f.label :budget, :class => 'col-md-2 control-label' %>
+    <div class="col-md-8 selectContainer">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-list"></i></span>
+        <%= f.select(:budget, { class: "form-control" })  do %>
+           <% [['Select A Value', 1], ['$300 - $500', 2], ['$500-$1000', 3], ['$1000-$3000', 4]].each do |c| -%>
+            <%= content_tag(:option, c.first, value: c.last) %>
+          <% end %>
+        <% end %>
+  
+      </div>
+    </div>
 </div>
+
+<!-- Text input-->
+<div class="form-group">
+  <%= f.label :website, :class => 'col-md-2 control-label' %>
+   <div class="col-md-8 inputGroupContainer">
+    <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-globe"></i></span>
+        <%= f.text_field :website, :class => 'col-md-6 form-control', placeholder: "Website or Domain name"%>
+    </div>
+  </div>
+</div>
+
+<!-- radio checks -->
+ <div class="form-group">
+    <label class="col-md-2 control-label">Do you have hosting?</label>
+    <div class="col-md-8 selectContainer">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-list"></i></span>
+        <%= f.select(:hosting, { class: "form-control" })  do %>
+           <% [['Select A Value', 1], ['Yes', 2], ['No', 3]].each do |c| -%>
+            <%= content_tag(:option, c.first, value: c.last) %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+<!-- Text area -->
+  
+<div class="form-group">
+  <%= f.label :message, :class => 'col-md-2 control-label' %>
+    <div class="col-md-8 inputGroupContainer">
+      <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
+          	<%= f.text_area :message, :class => 'col-md-8 form-control', placeholder: "Project Details" %>
+      </div>
+    </div>
+</div>
+
+
+<!-- Button -->
+<div class="form-group">
+  <label class="col-md-4 control-label"></label>
+  <div class="col-md-4">
+    <%= f.submit 'Submit message', :class => 'btn btn-warning'%>
+  </div>
+</div>
+
+</fieldset>
+</form>
+</div>
+    </div><!-- /.container -->
+    
+<% end %>
